# h264_glitcher

./: .editorconfig  .gitmodules  Cargo.toml  README.md  big_buck_bunny.h264  build.nix  build.rs  build_native_deps.bash  default.nix  encode_videos.fish  h264bitstream.nix  wrapper.h
beat_utils/: emulate_beats.py
doc/: network.excalidraw
h264_glitcher_gui/: Cargo.toml
h264_glitcher_gui/docs/: index.html  sw.js
h264_glitcher_gui/src/: app.rs  main.rs
h264_glitcher_protocol/: Cargo.toml
h264_glitcher_protocol/src/: lib.rs
h264_glitcher_server/: Cargo.toml
h264_glitcher_server/src/h264/: nal.rs  nal_iterator.rs  parse_h264.rs  pps.rs  slice_header.rs
open_stage_control/: h264_glitcher_Session.json
scripts/: content_tool.py  dodo.py
src/: beat_predictor.rs  fps_loop.rs  h264.rs  h264_iterator.rs  lib.rs  libh264bitstream.rs  main.rs  nal_iterator.rs  osc_var.rs  parse_nal.rs  sigma_delta.rs  thumbnail_server.rs
src/h264/: h264.rs  mod.rs  nal_iterator.rs  parse_h264.rs  parse_nal.rs  pps.rs  slice_header.rs  sps.rs
touchOSC/: h264_glitcher_default.tosc  h264_glitcher_default.touchosc
