[package]
name = "h264_glitcher"
version = "0.1.0"
authors = ["Anton Schirg <anton.schirg@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_primitive = "0.1.1"
rand = "0.8"
structopt = "0.3"
rosc = "0.6"
itertools = "0.10"
spin_sleep = "1"
bitstream-io = "1"
