[package]
name = "h264_glitcher"
version = "0.1.0"
authors = ["Anton Schirg <anton.schirg@posteo.de>"]
edition = "2018"
default-run = "h264_glitcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "h264_glitcher"

[[bin]]
name = "inspect_video"

[[bin]]
name = "validate_video_parameters"

[dependencies]
enum_primitive = "0.1.1"
rand = "0.8"
structopt = "0.3"
rosc = "0.6"
itertools = "0.10"
spin_sleep = "1"
bitstream-io = "1"
visit_diff = "0.1"
colored = "2"
walkdir = "*"

iron = "*"
staticfile = "*"
mount = "*"
